# Madoka

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  auto_sql.py  bot.py  brushscreen.py  deploy.sh  initDB.py  madoka.service  main.py  mysql.py  pyproject.toml  requirements.txt  run.sh  runmysql.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md  auto-assign.yml
.github/ISSUE_TEMPLATE/: config.yml  zh-cn-1-help.yml  zh-cn-2-feature-request.yml  zh-cn-3-bug-report.yml  zh-cn-4-other-issue.yml
.github/workflows/: auto-assign.yml  codeql-analysis.yml  codeql.yml  docker-hub-publish.yml  docker-hub.yml  release-please.yml  stale.yml  sync-coding.yml
app/api/: doHttp.py  qqskey.py  sign.py  tianyi.py
app/console/: __init__.py  base.py  csm.py  info_list.py  loads.py  power.py  util.py
app/console/basic/: __init__.py  csm.py  info_list.py  power.py  send.py
app/console/basic/info_list/: main.py
app/console/csm/: main.py
app/console/help/: mian.py
app/console/info_list/: main.py
app/console/power/: main.py
app/console/send/: main.py
app/core/: Exceptions.py  __init__.py  app.py  appCore.py  command_manager.py  commander.py  config.exp.yaml  config.ini  config.py  console.py  controller.py  database.py  env.config.ini  env.config.py  event.py  eventCore.py  exceptions.py  initDB.py  plugins.py  settings.py
app/entities/: NetEaseUser.py  game.py  group.py  user.py
app/event/: __init__.py  base.py  bot.py  botEvent.py  event.py  friend.py  friendEvent.py  friendRequest.py  group.py  groupEvent.py  join.py  reply.py  save.py
app/extend/: GroupTimingMessage.py  NetEaseCloudMusicAction.py  github.py  mc.py  message_queue.py  power.py  schedule.py  version.py
app/plugin/: GithubListener.py  GroupJoin.py  ImageRecognize.py  __init__.py  accountManager.py  acg.py  admin.py  base.py  chat.py  csm.py  fanyi.py  friendEvent.py  game.py  mcinfo.py  netease.py  permission.py  power.py  qq.py  rank.py  reply.py  replyKeyword.py  sys.py  zhanzhangTools.py
app/plugin/basic/: GithubListener.py  GroupJoin.py  accountManager.py  account_manager.py  csm.py  game.py  github_listener.py  group_join.py  madoka_manager.py  mc_info.py  mcinfo.py  permission.py  power.py  rank.py  replyKeyword.py  reply_keyword.py  sys.py
app/plugin/basic/__01_sys/: main.py
app/plugin/basic/__02_power/: main.py
app/plugin/basic/__03_user_manager/: main.py
app/plugin/basic/__04_plugin_manager/: main.py
app/plugin/basic/__05_csm/: main.py
app/plugin/basic/__06_permission/: main.py
app/plugin/basic/__07_group_qa/: main.py
app/plugin/basic/__07_reply_keyword/: main.py
app/plugin/basic/__08_group_join/: main.py
app/resource/: earn_quot.py
app/trigger/: PseudoAI.py  __init__.py  chat.py  csm.py  flash_png.py  flashpng.py  group_qa.py  mode.py  repeat.py  reply.py  save_msg.py  savemsg.py  trigger.py
app/util/: CutString.py  __init__.py  brushscreen.py  control.py  csm.py  cut_string.py  dao.py  decorator.py  doHttp.py  initDB.py  link_list.py  msg.py  mysql.py  network.py  onlineConfig.py  online_config.py  other.py  permission.py  phrases.py  sendMessage.py  send_message.py  text2image.py  tools.py  version.json  version.py
app/util/alconna/: __init__.py  commander.py  tools.py
app/util/baidu_ai/: __init__.py  moderation.py
app/util/exceptions/: __init__.py  app.py  command.py  database.py  depend.py  plugin.py
app/util/graia/: __init__.py  message.py  tools.py
docs/: GIT_BRANCH_FLOW.md
k8s/: kustomization.yaml  storage_class.yaml
k8s/app/: bot.yaml  mcl.yaml  mysql.yaml
k8s/images/: Dockerfile
k8s/images/madoka/: Dockerfile
k8s/images/mcl/: Dockerfile
migrator/: v3tov4.py
webapp/: main.py
webapp/api/rest/: health.py
webapp/util/: tools.py
(+20 files in other folders)
