[project]
authors = [
    {name = "Colsrch", email = "colsrch@foxmail.com"},
]
requires-python = ">=3.9,<4.0"
license = {text = "AGPL-3"}
dependencies = [
    "graia-ariadne==0.9.10",
    "graia-scheduler==0.0.8",
    "graia-saya==0.0.16",
    "richuru==0.1.1",
    "arclet-alconna==1.3.2.1",
    "arclet-alconna-graia==0.8.0",
    "prompt-toolkit~=3.0.31",
    "prettytable~=3.4.1",
    "retrying~=1.3.3",
    "peewee~=3.15.2",
    "pillow~=9.2.0",
    "jsonpath~=0.82",
    "pip~=22.2.2",
    "arclet-alconna-tools>=0.2.1",
    "PyYaml>=6.0",
]

[project.optional-dependencies]
mysql = [
    "pymysql~=1.0.2",
    "cryptography>=38.0.1",
]
baidu = [
    "baidu-aip>=4.16.8",
    "chardet>=5.0.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.urls]
repository = "https://github.com/MadokaProject/Madoka"
documentation = "https://madoka.colsrch.cn"

[tool]

[tool.pdm]

[tool.pdm.scripts]
start.cmd = "python main.py"
start.help = "启动 Madoka"
clean.cmd = "rm -rf **/__pycache__"
clean.help = "清理 __pycache__"
lint.cmd = "pre-commit run --all-files"
lint.help = "检查代码"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=2.20.0",
    "black>=22.12.0",
    "ruff>=0.0.260",
]

[tool.isort]
profile = "black"
extend_skip_glob = [
    "app/trigger/__init__.py",
]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.pyright]
ignore = [
    "docs/**",
    "**/__pypackages__/**/*.py",
    "**/test*/**/*.py",
    "**/tmp/**",
    "**/temp/**/*.py",
    "app/util/network.py",
    "app/trigger/__init__.py",
]

[tool.ruff]
line-length = 120

select = ["E", "F", "I", "UP", "C", "T", "Q"]
ignore = ["C901", "E501"]

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs/**",
    "**/test*/**/*.py",
    "**/tmp/**",
    "**/temp/**/*.py",
    "app/util/network.py",
    "app/trigger/__init__.py"
]
per-file-ignores = {}

target-version = "py39"

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true
